--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>aqui iria el título de la hoja</h1>
     <p>Esto es un párrafo</p>
     <p>Esto es otro párrafo</p>
+    <p>Esto es otro p&aacutearrafo</p>
 
     
 </body>
