Incorporación directorios css y js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="/css/estilos.css" rel="Stylesheet" type="text/css">
 </head>
 <body>
     <h1>aqui iria el título de la hoja</h1>
