--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Primera Página web</title>
 
     <link href="/css/estilos.css" rel="Stylesheet" type="text/css">
 </head>
