--- a/index.html
+++ b/index.html
@@ -10,9 +10,44 @@
 <body>
     <h1>aqui iria el título de la hoja</h1>
     <p>Esto es un párrafo</p>
-    <p>Esto es otro párrafo</p>
+    <p><b>Este p&aacuterrafo esta en negrita</b></p>
     <p>Esto es otro p&aacutearrafo</p>
 
+    <!--esto es un comentario-->
     
+    <!---Lista numerada-->
+    <ol>
+        <li>paso 1</li>
+        <li>paso 2</li>
+        <li>paso 3</li>
+    </ol>
+    <!--Añadir una imagen-->
+
+    <a href="https://www.w3schools.com/"> <img src="/imagenes/ESP.png" alt="Mapa I/O ESP" width="290" height="350"></a>
+    <p><button>Encender</button></p>
+    <p><button>Apagar</button></p>
+
+    <table>
+        <tr>
+            <th>MEDIDA</th>
+            <th>VALOR</th>
+        </tr>
+        <tr>
+            <td>Temperatura (&deg;C)</td>
+            <td>25 &deg;C</td>
+        </tr>
+        <tr>
+            <td>Humedad (&percnt;)</td>
+            <td>54 &percnt;</td>
+        </tr>
+        <tr>
+            <td>Presi&oacuten (hPa)</td>
+            <td>1004.54 hPa</td>
+        </tr>
+        <tr>
+            <td>Altitud (m)</td>
+            <td>73 m.</td>
+        </tr>
+    </table>
 </body>
 </html>
