Imagenes y css reconocido

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Mi Primera Página web</title>
 
-    <link href="/css/estilos.css" rel="Stylesheet" type="text/css">
+    <link href="css/estilos.css" rel="Stylesheet" type="text/css">
 </head>
 <body>
     <h1>aqui iria el título de la hoja</h1>
@@ -23,7 +23,7 @@
     </ol>
     <!--Añadir una imagen-->
 
-    <a href="https://www.w3schools.com/"> <img src="/imagenes/ESP.png" alt="Mapa I/O ESP" width="290" height="350"></a>
+    <a href="https://www.w3schools.com/"> <img src="imagenes/ESP.png" alt="Mapa I/O ESP" width="500" height="393"></a>
     <p><button>Encender</button></p>
     <p><button>Apagar</button></p>
 
